2007-10-14  Kaz Sasayama  <kazssym@vx68k.org>

	* NEWS: Updated for new release.

2007-06-26  Kaz Sasayama  <kazssym@vx68k.org>

	* NEWS: Updated.

	* programs/Makefile.am (rglclock_LDADD): Changed librglclock to a
	libtool library.

	* lib/Makefile.am (noinst_LIBRARIES): Removed librglclock.
	(lib_LTLIBRARIES): New macro.
	(librglclock_la_LDFLAGS): New macro.
	(librglclock_la_SOURCES): Renamed from librglclock_a_SOURCES.
	(LIBS): New macro.

	* configure.ac: Moved libtool macros near the end.

2007-06-25  Kaz Sasayama  <kazssym@vx68k.org>

	* programs/clock.cpp (glclock::~glclock): Changed to use
	g_signal_handlers_disconnect_matched instead of
	gtk_signal_disconnect_by_data.

2007-06-23  Kaz Sasayama  <kazssym@vx68k.org>

	* configure.ac: Removed the test for asprintf.

2007-06-22  Kaz Sasayama  <kazssym@vx68k.org>

	* programs/clock.cpp (handle_button_press_event): Changed the
	return type from void to gboolean.

	* lib/Makefile.am (noinst_LIBRARIES): Renamed libclock to
	librglclock.
	* programs/Makefile.am (rglclock_LDADD): Changed libclock to
	librglclock.
	(EXTRA_DIST): Removed options-0.dtd.

	* Makefile.am (AUTOMAKE_OPTIONS): New macro.
	(SUBDIRS): Added testsuite.

	* configure.ac: Changed the source directory test file.
	Added testsuite/Makefilt to AC_CONFIG_FILES.

	* testsuite/config/unix.exp: New file.
	* testsuite/Makefile.am: New file.

2007-05-23  Kaz Sasayama  <kazssym@vx68k.org>

	* configure.ac: Changed VERSION to 2.0.3.

	* programs/glgtk.cpp: Moved from lib/gdk_gl.h.

	* programs/glgtk.h: Moved from lib/gdk_gl.h.
	(class glgtk_context): New class.

	* programs/clock.h: Moved from include/glclock.h.

	* programs/clock.cpp: Moved from lib/glclock.cc.

	* programs/Makefile.am (rglclock_SOURCES): Added clock.cpp,
	options.cpp, modaldialog.cpp, and glgtk.cpp, which were moved from
	lib with renaming.
	(rglclock_LDADD): Removed libutils.h.
	(noinst_HEADERS): Added clock.h and glgtk.h.

	* lib/Makefile.am (AM_CPPFLAGS): Renamed from old name INCLUDES